infrastructure/pinniped/controller/overlays/vanilla/tlsroute-concierge.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: TLSRoute
metadata:
  name: pinniped-concierge
spec:
  parentRefs:
    - name: public-gateway
      namespace: istio-gateway
      sectionName: tls-passthrough
  hostnames:
    - "pinniped.<domain>"
  rules:
    - backendRefs:
        - name: pinniped-concierge-impersonation-proxy-cluster-ip
          kind: Service
          port: 443
